--- a/.github/workflows/study.yml
+++ b/.github/workflows/study.yml
@@ -1,7 +1,32 @@
-name: Github Test
-on: [push]
+name: express-build
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 jobs:
-  a:
+  express-build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x]
+        # node-version: [14.x, 16.x, 18.x]
+    defaults:
+      run:
+        working-directory: ./server/
+
     steps:
-      - run: echo "TEST Action"
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+        cache-dependency-path: 'server/package-lock.json'
+
+    - run: npm ci
+    - run: npm run build --if-present
+      env:
+        DEBUG: express-builder
