--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "build": "npx tsc",
     "start": "node index.js",
     "compile": "tsc && node ./dist/app.js",
-    "dev": "nodemon -e ts --exec \"npm run compile\""
+    "dev": "nodemon -e ts --exec \"npm run compile\"",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +16,19 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.5",
+    "@types/supertest": "^6.0.2",
     "concurrently": "^8.2.2",
+    "i": "^0.3.7",
     "nodemon": "^3.1.3",
+    "npm": "^10.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "@types/jest": "^29.5.12",
+    "express": "^4.19.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.5"
   }
 }
