--- a/.github/workflows/study.yml
+++ b/.github/workflows/study.yml
@@ -32,3 +32,7 @@ jobs:
       env:
         DEBUG: express-builder
     - run: npm test
+  complete-test:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "🎉 Success All Actions"
